codepkg/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>AverageSalary__c</fullName>
        <label>AverageSalary</label>
        <summarizedField>Employeer__c.Salary__c</summarizedField>
        <summaryForeignKey>Employeer__c.Department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountSalary__c</fullName>
        <formula>AverageSalary__c /  Count_Emploee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountSalary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Emploee__c</fullName>
        <label>Count Emploee</label>
        <summaryForeignKey>Employeer__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_Employee_Workflow__c</fullName>
        <label>Count Employee Workflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxSalary__c</fullName>
        <label>MaxSalary</label>
        <summarizedField>Employeer__c.Salary__c</summarizedField>
        <summaryForeignKey>Employeer__c.Department__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MinSalary__c</fullName>
        <label>MinSalary</label>
        <summarizedField>Employeer__c.Salary__c</summarizedField>
        <summaryForeignKey>Employeer__c.Department__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name New</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>